# cardsflow_gazebo

./: CMakeLists.txt  README.md  cardsflow_gazebo_plugin.xml  joint_position_controller.xml  package.xml
include/cardsflow_gazebo/: cardsflow_gazebo.hpp
include/cardsflow_gazebo/eccerobotMuscle/physics/: Actuator.h  AttachmentPoint.h  CylindricalPulley.h  IActuator.h  IMuscle.h  ISeriesElasticElement.h  IZenerModel.h  LinearSpringDamper.h  MeshPulley.h  Muscle.h  ZenerModel.h
include/cardsflow_gazebo/eccerobotMuscle/physics/geodesic/: geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_mesh.h
include/cardsflow_gazebo/muscle/: Actuator.h  CylindricalWrapping.hpp  IActuator.h  IActuator.hpp  IMuscle.hpp  ISee.hpp  IViaPoints.hpp  MeshWrapping.hpp  MuscPID.hpp  SphericalWrapping.hpp  StateMachine.hpp
launch/: 6DOF_arm.launch  TestRobot.launch  ball.launch  bike.launch  cable_robot_6dof.launch  musc_le.launch  myo_test_bed_1dof.launch  myo_test_bed_2dof.launch  myo_test_bed_4dof.launch  planar_2r_xz.launch  roboy_2_0_head_simplified.launch  roboy_2_0_left_arm_elbow.launch  roboy_2_0_left_arm_simplified.launch  roboy_2_0_simplified.launch  roboy_2_0_xylophone.launch  roboy_hand_left.launch  roboy_vr_booth.launch  roboy_world.launch  roboy_xylophone.launch  roboy_xylophone_left_arm.launch  test_robot.launch
scripts/: joint_based.py  sensible.py  simple_ctl.py  test.py
src/: JointPositionController.cpp  cardsflow_gazebo.cpp  testMuscle.cpp  testZenerModel.cpp
src/eccerobotMuscle/.svn/: all-wcprops  entries
src/eccerobotMuscle/.svn/text-base/: CMakeLists.txt.svn-base  EccerobotMuscleExtension.cpp.svn-base  EccerobotMuscleExtension.h.svn-base  ParseException.h.svn-base
src/eccerobotMuscle/physics/: Actuator.cpp  AttachmentPoint.cpp  CylindricalPulley.cpp  LinearSpringDamper.cpp  MeshPulley.cpp  Muscle.cpp  PulleyStateMachine.cpp  SphericalPulley.cpp  ZenerModel.cpp
src/eccerobotMuscle/physics/.svn/: all-wcprops  entries
src/eccerobotMuscle/physics/.svn/text-base/: Actuator.cpp.svn-base  Actuator.h.svn-base  AttachmentPoint.h.svn-base  PulleyStateMachine.h.svn-base  SphericalPulley.h.svn-base  ZenerModel.cpp.svn-base  ZenerModel.h.svn-base
src/eccerobotMuscle/physics/geodesic/.svn/: all-wcprops  entries
src/eccerobotMuscle/physics/geodesic/.svn/text-base/: example0.svn-base  geodesic_memory.h.svn-base
src/muscle/: Actuator.cpp  CylindricalWrapping.cpp  IActuator.cpp  IMuscle.cpp  ISee.cpp  IViaPoints.cpp  MuscPID.cpp  SphericalWrapping.cpp  StateMachine.cpp
