<?xml version="1.0"?>
<package format="2">
    <name>cardsflow_gazebo</name>
    <version>0.0.0</version>
    <description>The cardsflow_gazebo package</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>std_msgs</depend>
    <depend>grid_map_ros</depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>control_toolbox</depend>
    <depend>controller_manager</depend>
    <depend>gazebo</depend>
    <depend>gazebo_ros_control</depend>
    <depend>rviz</depend>
    <depend>geometry_msgs</depend>
    <depend>common_utilities</depend>
    <depend>roboy_middleware_msgs</depend>
    <depend>roboy_simulation_msgs</depend>

    <export>
        <roboy_simulation plugin="${prefix}/cardsflow_gazebo_plugin.xml"/>
    </export>
</package>
